[project]
name = "shhh"
version = "0.0.0-dev.1"
description = "Simple environment secret accessor for Python."
authors = [
  { name = "Anatoly Frolov (anafro)", email = "anatolyfroloff@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
